--- a/src/components/UserCard/styles.module.css
+++ b/src/components/UserCard/styles.module.css
@@ -1,10 +1,43 @@
-.container {
+.card {
   width: 250px;
   padding: 8px 0px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+
+  padding: 16px 24px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .name {
   font-size: 1.5em;
   font-weight: bold;
   margin: 0px;
+}
+
+.email {
+  margin: 0px;
+  margin-top: 16px;
+}
+
+.phone, .website {
+  margin: 0px;
+  margin-top: 8px;
+}
+
+.company {
+  margin-top: 32px;
+}
+
+.company-title {
+  font-size: 1em;
+  font-weight: bold;
+  margin: 0px;
+}
+
+.company-name, .company-catchphrase {
+  margin: 0px;
+  margin-top: 8px;
 }
